@@ -59,6 +59,9 @@
     <ClCompile Include="type_proc.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="var_set.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
